pythonapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: pythonapptest
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: bish1983/bish-k8s:0.0.2
        imagePullPolicy: Always
        # image: nginx:latest
        ports:
        - containerPort: 80
